# recipe-ai-video-processor

./: .dockerignore  .env.example  .gitignore  ACTIVE_MODE_SETUP.md  DEPLOYMENT.md  Dockerfile  INSTAGRAM_COOKIES_SETUP.md  INSTAGRAM_FIX.md  README_GCP_DEPLOYMENT.md  cleanup-temp-files.service  cleanup-temp-files.sh  cleanup-temp-files.timer  deploy_gcp.sh  deploy_gcp_free.sh  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  recipeai-video-processor.service  requirements.txt  start.sh  test-docker.sh  zbpack.json
docs/: ADGEM_DEPLOYMENT_GUIDE.md  CURRENT_STATUS.md  DEPLOY.md  QUICK_START.md  README_STARTUP.md  YOUTUBE_COOKIES_SETUP.md
docs/archive/: FREE_TIER_MIGRATION_GUIDE.md  LANGCHAIN_MIGRATION.md  migrate_to_free_tier.sh
scripts/: update_cookies_oneclick.sh  upload_cookies.py  upload_youtube_cookies.py
src/: analyzer.py  config.py  cookies_manager.py  downloader.py  extractor.py  extractor.py.backup  llm_config.py  main.py  main.py.backup  pipeline.py  pipeline.py.backup  streaming_extractor.py  thumbnail_generator.py  video_utils.py
tests/: test_analyzer.py  test_downloader.py  test_e2e_recipe_extraction.py  test_extractor.py  test_integration.py  test_integration_all_platforms.py  test_multi_language.py  test_real_platform_downloads.py  test_streaming.py
