[tool.poetry]
name = "aizhu-helper-video-processor"
version = "1.0.0"
description = "Video analysis and recipe extraction for 愛煮小幫手 LINE Bot"
authors = ["愛煮小幫手 Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2024.10.7"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
boto3 = "^1.35.79"
langchain-core = "^0.3"
langchain-google-genai = "^2.0"
langchain-openai = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"
mypy = "^1.11.2"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "e2e: End-to-end tests that require external resources (download, API calls)"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
